<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/usernameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textNoSuggestions|textPersonName" />

    <EditText
        android:id="@+id/addressR"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPersonName"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/nameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/regName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/surnameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/regSur"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/registerOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register" />

</LinearLayout>
